# videostitch

./: CMakeLists.txt  changeLog.txt
VideoStitch/: VideoStitch.vcxproj  main.cpp
VideoStitch/x64/Debug/: vc140.idb
VideoStitch/x64/Debug/VideoStitch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VideoStitch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VideoStitch/x64/Release/VideoStitch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VideoStitch.lastbuildstate
lib/: .gitattributes  robot_city_bridge.bag
